# DynamicDensityMap

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  DensityMap.proto  DensityMapBase.h  DensityMapBenchmark.cpp  DensityMapDescription.cpp  DensityMapDescription.h  DensityMapServer.cpp  DensityMapServer.h  DynamicDensity.proto  DynamicHistogram.cpp  DynamicHistogram.h  DynamicHistogramBenchmark.cpp  DynamicHistogramTest.cpp  DynamicKDE.cpp  DynamicKDE.h  DynamicKDE2D.cpp  DynamicKDE2D.h  DynamicKDE2DTest.cpp  DynamicKDETest.cpp  InsertionBuffer.h  InsertionBufferTest.cpp  LICENSE  LocklessInsertionBuffer.h  LocklessInsertionBufferTest.cpp  README.md  WORKSPACE  run_malloc.cpp  show_density_map.py  show_histogram.py
DynamicHistogram/: CMakeLists.txt
DynamicHistogram/src/: DynamicHistogram.cpp  DynamicHistogram.h  DynamicHistogramReference.h  main.cpp
DynamicHistogram/test/: CMakeLists.txt  DynamicHistogramBenchmark.cpp  DynamicHistogramTest.cpp
cpp/: CMakeLists.txt  DensityMap.proto  DensityMapBase.h  DensityMapDescription.h  DensityMapServer.h  DynamicHistogram.h  DynamicHistogramBenchmark.cpp  DynamicHistogramReference.h  DynamicHistogramTest.cpp  DynamicKDE.h  DynamicKDE2D.h  DynamicKDE2DTest.cpp  DynamicKDETest.cpp  InsertionBuffer.h  InsertionBufferTest.cpp  README.md  run_malloc.cpp
cpp/scripts/: show_histogram.py
cpp/src/: DynamicHistogramReference.h  main.cpp
cpp/test/: CMakeLists.txt  DynamicHistogramTest.cpp
example/: BUILD.bazel  WORKSPACE  profile_malloc.cpp  run_malloc.cpp
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: equivalence_test.rs
scripts/: show_histogram.py
test/: DensityMapTest.pb  DynamicHistogram.pbuf  DynamicKDE.pbuf  DynamicKDE2D.pbuf
