load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test", "cc_proto_library")
load("@protobuf//:protobuf.bzl", "py_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "density_map_description",
    hdrs = ["DensityMapDescription.h"],
    deps = [
        ":dynamic_density_cc_proto",
        ":timestamp_cc_proto",
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_library(
    name = "density_map_base",
    hdrs = ["DensityMapBase.h"],
    deps = [
        ":density_map_description",
        ":dynamic_density_cc_proto",
        ":timestamp_cc_proto",
        ":insertion_buffer",
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_library(
    name = "dynamic_histogram",
    hdrs = ["DynamicHistogram.h"],
    deps = [
        ":density_map_server",
        ":density_map_base",
        ":density_map_description",
        ":dynamic_density_cc_proto",
        ":timestamp_cc_proto",
        ":insertion_buffer",
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_test(
    name = "dynamic_histogram_test",
    srcs = ["DynamicHistogramTest.cpp"],
    deps = [
        ":dynamic_density_cc_proto",
        ":dynamic_histogram",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_library(
    name = "dynamic_kde",
    hdrs = ["DynamicKDE.h"],
    deps = [
        ":density_map_base",
        ":density_map_description",
        ":dynamic_density_cc_proto",
        ":timestamp_cc_proto",
        ":insertion_buffer",
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_test(
    name = "dynamic_kde_test",
    srcs = ["DynamicKDETest.cpp"],
    deps = [
        ":dynamic_density_cc_proto",
        ":dynamic_kde",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_library(
    name = "dynamic_kde_2d",
    hdrs = ["DynamicKDE2D.h"],
    deps = [
        ":density_map_base",
        ":density_map_description",
        ":dynamic_density_cc_proto",
        ":timestamp_cc_proto",
        ":insertion_buffer",
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_test(
    name = "dynamic_kde_2d_test",
    srcs = ["DynamicKDE2DTest.cpp"],
    deps = [
        ":dynamic_density_cc_proto",
        ":dynamic_kde_2d",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_binary(
    name = "dynamic_histogram_benchmark",
    srcs = ["DynamicHistogramBenchmark.cpp"],
    deps = [
        ":dynamic_histogram",
        ":dynamic_kde",
        ":dynamic_kde_2d",
        "@benchmark//:benchmark",
    ],
    copts = [
        "-std=c++17",
    ],
)

proto_library(
    name = "dynamic_density_proto",
    srcs = ["DynamicDensity.proto"],
    deps = ["@protobuf//:timestamp_proto"],
)

cc_proto_library(
    name = "dynamic_density_cc_proto",
    deps = [":dynamic_density_proto"],
)

cc_proto_library(
    name = "timestamp_cc_proto",
    deps = ["@protobuf//:timestamp_proto"],
)

py_proto_library(
    name = "dynamic_density_py_proto",
    srcs = ["DynamicDensity.proto"],
    deps = ["@protobuf//:protobuf_python"],
)

cc_grpc_library(
    name = "dynamic_density_cc_grpc",
    srcs = [":dynamic_density_proto"],
    grpc_only = True,
    deps = [
        ":dynamic_density_cc_proto",
    ],
)

py_grpc_library(
    name = "dynamic_density_py_grpc",
    srcs = [":dynamic_density_proto"],
    deps = [
        ":dynamic_density_py_proto",
    ],
)

py_binary(
    name = "show_density_map",
    srcs = ["show_density_map.py"],
    deps = [
        ":dynamic_density_py_grpc",
        ":dynamic_density_py_proto",
    ],
    python_version = "PY3",
)

cc_library(
    name = "insertion_buffer",
    srcs = ["InsertionBuffer.h"],
)

cc_test(
    name = "insertion_buffer_test",
    srcs = ["InsertionBufferTest.cpp"],
    deps = [
        ":insertion_buffer",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_library(
    name = "density_map_server",
    srcs = ["DensityMapServer.h"],
    deps = [
        ":density_map_description",
        ":dynamic_density_cc_proto",
        ":dynamic_density_cc_grpc",
        ":density_map_base",
        "@com_github_grpc_grpc//:grpc++",
    ],
    copts = [
        "-std=c++17",
    ],
)

cc_binary(
    name = "run_malloc",
    srcs = ["run_malloc.cpp"],
    deps = [
        ":density_map_server",
        ":dynamic_histogram",
        ":dynamic_kde",
        ":dynamic_kde_2d",
    ],
    copts = [
        "-std=c++17",
    ],
)
